--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,8 +103,6 @@
     --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
     --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
   }
-
-
 }
 
 @layer base {
@@ -131,6 +129,35 @@ pre>code {
   display: grid;
   max-width: inherit !important;
   padding: 14px 0 !important;
+}
+
+footer {
+  background-color: hsl(var(--background));
+}
+
+.home-background {
+  position: relative;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.home-background::before {
+  content: "";
+  position: fixed;
+
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+
+  background-image: url('/images/doc-bg.gif');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  opacity: 0.2;
+  z-index: -2;
+  pointer-events: none;
 }
 
 .code-line {
