--- a/styles/globals.css
+++ b/styles/globals.css
@@ -244,3 +244,9 @@ footer {
 td>code {
   word-break: keep-all !important;
 }
+
+@media (max-width: 640px) {
+  footer {
+    background-color: transparent;
+  }
+}
