Update branding and add constructors to docs
Replaced the navbar logo and title with branding for Kraken Engine, updated the introduction page with a banner image, and added constructor signatures to all class documentation pages.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -488,3 +488,13 @@ nav[aria-label="On this page"] {
 aside>div>div>div>div>div>div>div>div {
   padding-left: 1em;
 }
+
+#kraken-banner {
+  margin-right: 1.25rem;
+}
+
+#kraken-banner>img {
+  height: 2.75rem;
+  border: 2px white solid;
+  border-radius: 50%;
+}
