--- a/styles/globals.css
+++ b/styles/globals.css
@@ -495,6 +495,7 @@ aside>div>div>div>div>div>div>div>div {
 
 #kraken-banner>img {
   height: 2.75rem;
+  width: 2.75rem;
   border: 2px white solid;
   border-radius: 50%;
 }
