--- a/styles/globals.css
+++ b/styles/globals.css
@@ -891,3 +891,25 @@ aside>div>div>div>div>div>div>div>div {
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.2);
 }
+
+/* REMOVE ME NEXT YEAR */
+.christmas-bg {
+  position: relative;
+}
+
+.christmas-bg::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('/images/christmas-lights.webp');
+  background-repeat: repeat;
+  background-attachment: fixed;
+  background-size: 200px 200px;
+  opacity: 0.03;
+  z-index: -1;
+  pointer-events: none;
+}
+/* --------------------- */
